--- a/ECommerce/Views/Departments/Index.cshtml
+++ b/ECommerce/Views/Departments/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Departments</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("New Department", "Create", new { }, new {@class="btn btn-primary" })
 </p>
 <table class="table">
     <tr>
@@ -23,9 +23,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DepartmentsId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DepartmentsId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DepartmentsId })
+            @Html.ActionLink("Edit", "Edit", new { id=item.DepartmentsId }, new { @class = "btn btn-warning" }) |
+            @Html.ActionLink("Details", "Details", new { id=item.DepartmentsId }, new { @class = "btn btn-info" }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.DepartmentsId }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
