--- a/ECommerce/Views/Departments/Delete.cshtml
+++ b/ECommerce/Views/Departments/Delete.cshtml
@@ -4,7 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Department</h2>
+
+<!--validation-->
+@Html.ValidationSummary(true, "", new { @class="text-danger" })
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
