--- a/ECommerce/Views/Departments/Create.cshtml
+++ b/ECommerce/Views/Departments/Create.cshtml
@@ -4,13 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create New Department</h2>
 
+<!--validation prevent duplicate registration-->
+@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Departments</h4>
         <hr />
