--- a/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/Views/Shared/_Layout.cshtml
@@ -22,10 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Departments", "Index", "Departments")</li>
                     <li>@Html.ActionLink("Cities", "Index", "Cities")</li>
+                    <li>@Html.ActionLink("Companies", "Index", "Companies")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
