--- a/ECommerce/Views/Companies/Details.cshtml
+++ b/ECommerce/Views/Companies/Details.cshtml
@@ -11,6 +11,22 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Cities.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Cities.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Departments.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Departments.Name)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
 
