--- a/ECommerce/Views/Companies/Create.cshtml
+++ b/ECommerce/Views/Companies/Create.cshtml
@@ -11,6 +11,9 @@
 {
     @Html.AntiForgeryToken()
 
+    <!--upload post imagem-->
+    @using (Html.BeginForm("Create", "Companies", FormMethod.Post, new { enctype = "multipart/form-data" }))
+
     <div class="form-horizontal">
         <h4>Company</h4>
         <hr />
@@ -39,11 +42,13 @@
             </div>
         </div>
 
+        <!--imagem upload-->
         <div class="form-group">
-            @Html.LabelFor(model => model.Logo, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.LogoFile, htmlAttributes: new { @class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Logo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Logo, "", new { @class = "text-danger" })
+                <span class="btn btn-default btn-file">
+                    @Html.TextBoxFor(mod => mod.LogoFile, new { type = "file"})
+                </span>
             </div>
         </div>
 
