43 and 44: Configuring the user photo in the function edit (UsersController.cs). Configuration the Super User in Web.config.

--- a/ECommerce/Views/Companies/Index.cshtml
+++ b/ECommerce/Views/Companies/Index.cshtml
@@ -49,6 +49,8 @@
         <td>
             @Html.DisplayFor(modelItem => item.Address)
         </td>
+
+        <!--image-->
         <td>
             @if (!string.IsNullOrEmpty(item.Logo))
                 {
