--- a/ECommerce/Views/Users/Index.cshtml
+++ b/ECommerce/Views/Users/Index.cshtml
@@ -68,7 +68,10 @@
             @Html.DisplayFor(modelItem => item.Address)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Photo)
+            @if (!string.IsNullOrEmpty(item.Photo))
+            {
+        <img src="@Url.Content(item.Photo)" alt="Image" style="width:50px; height:50px; max-width: 100%; height:auto;" />
+            }
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.UserId }) |
